IDE-1386 port jUnit tests to GwtJUnit tests